[package]
name = "pxls-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
env_logger = "0.11.8"
log = "0.4.28"
nix = { version = "0.30.1", features = ["net", "socket"] }
pingora = "0.6.0"
pingora-proxy = "0.6.0"
sha2 = "0.10.9"
